[project]
name = "correctiverag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=26.5.1",
    "chromadb>=1.5.9",
    "document>=1.0",
    "isort>=8.0.1",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langchainhub>=0.1.21",
    "langgraph>=1.2.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
]
